vacation, user 등록 및 조회 api 수정